Añade center-column al css
Para poder mostrar contenido centrado

--- a/curso_git_ticarum.css
+++ b/curso_git_ticarum.css
@@ -89,6 +89,11 @@ code {
   float: right;
   padding-top: 1em;
 }
+.center-column {
+  width: 75%
+  float: center;
+  padding-top: 1em;
+}
 
 .blue {
     color: #0000ff;
